# Knot

./: .gitignore  ContextMesh_Engineering_Spec_v1.md  README.md  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: agents.rs  graph.rs  mod.rs  projects.rs
src-tauri/src/mcp/: mod.rs  tools.rs
src-tauri/src/parser/: languages.rs  mod.rs
src-tauri/src/parser/extractors/: javascript.rs  mod.rs  python.rs  typescript.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/watcher/: debouncer.rs  mod.rs
src/ui/: index.html  package.json  tailwind.config.js  vite.config.ts
src/ui/src/: App.tsx  index.css
src/ui/src/components/: LandingPage.tsx  Layout.tsx  Sidebar.tsx  Statusbar.tsx  Titlebar.tsx
src/ui/src/components/tabs/: AgentsTab.tsx  CostTab.tsx  DashboardTab.tsx  GraphTab.tsx  SettingsTab.tsx
src/ui/src/stores/: agentStore.ts  graphStore.ts  projectStore.ts
