[package]
name = "knot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = { version = "2", features = ["default"] }
tauri-plugin-fs = "2"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled", "vtab", "blob"] }
tree-sitter = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
winnow = "0.6"
notify = "6"
notify-debouncer-full = "0.3"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
